@@ -11,7 +11,10 @@ import org.apache.commons.io.FileUtils;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,19 +27,53 @@ public class FileSystemDataSourceRelationService
 
 
     @Override
-    public void persistFileInformationToStorage(File fileToBePersisted) {
-        log.info("Persisting file with name {} and location {}",fileToBePersisted.getName(),fileToBePersisted.getPath());
+    public void persistFileInformationToStorage(File fileToBePersisted,long fileLength) {
+        log.info("Persisting file with name {} and location {}",
+                fileToBePersisted.getName(),fileToBePersisted.getPath());
         FileEntity file = new FileEntity();
         FileDirectory fileDirectory = new FileDirectory();
+
 
         file.setFileLocked(false);
         file.setFileName(fileToBePersisted.getName());
         file.setCreatedUserName("Rumlor");
         file.setFileDirectory(fileDirectory);
-        file.setFileSize(String.valueOf(FileUtils.sizeOf(fileToBePersisted)/1024).concat("KB"));
+        file.setFileSize(String.valueOf(fileLength/1024).concat("KB"));
 
         fileDirectory.setFileLocation(Directory.builder().containingDirectory(fileToBePersisted.getParent()).build());
-        fileDirectory.setFilesOnDirectory(List.of(file));
+        fileDirectory.setFilesOnDirectory(Arrays.asList(file));
+
+        fileDirectoryRepository.save(fileDirectory);
+
+    }
+
+    @Override
+    public void persistFileToDirectory(File fileToBePersisted,long fileLength) {
+        log.info("Parent Directory {} already exists. Merging file {} to directory"
+                ,fileToBePersisted.getParent(),fileToBePersisted.getPath());
+        FileEntity file = new FileEntity();
+        FileDirectory fileDirectory = new FileDirectory();
+
+        var checkFileIfExists = fileRepository.findFileEntityByFileName(fileToBePersisted.getName());
+        var filteredFiles = checkFileIfExists.stream().filter(fileEntity ->
+                fileEntity.getFileDirectory().getFileLocation()
+                        .getContainingDirectory().equals(fileToBePersisted.getParent())).collect(Collectors.toList());
+        if(!filteredFiles.isEmpty())
+        {
+            log.info("File {} already exists in system.Overriding existing one",fileToBePersisted.getPath());
+            file = filteredFiles.get(0);
+            // it's timestamp has to be updated manually.
+            file.setUpdateTime(LocalDateTime.now());
+
+        }else {
+            file.setFileLocked(false);
+            file.setFileName(fileToBePersisted.getName());
+            file.setCreatedUserName("Rumlor");
+            file.setFileDirectory(fileDirectory);
+            file.setFileSize(String.valueOf(fileLength/1024).concat("KB"));
+            fileDirectory.setFileLocation(Directory.builder().containingDirectory(fileToBePersisted.getParent()).build());
+            fileDirectory.setFilesOnDirectory(Arrays.asList(file));
+        }
 
         fileRepository.save(file);
     }
